# tricky-tui

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/core/: Board.hpp  GameController.hpp  GameType.hpp
include/trickyLib/: tricky.hpp
include/ui/: GameUI.hpp
src/: CMakeLists.txt  tricky.cpp
src/core/: Board.cpp  GameController.cpp
src/ui/: GameUI.cpp
